--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,37 +23,41 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide) */
 aside{
     background-color: black;
     width: 5%;
-    height: 90vh;
+    height: 900px;
     float: left;
 }
 
 main{
     width: 95%;
-    height: 90vh;
+    height: 900px;
     float: left;
-    background-color: lightblue;
-    border: 1px solid red;
 }
 
 footer{
     background-color: lightgrey;
     width: 100%;
-    height: 10vh;
+    height: 100px;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    bottom: 0;
 }
 
 .header-main{
     width: 100%;
-    height: 10%;
-    background-color: lime;
+    height: 100px;
+    background-color: rgba(0,255,0, 0.4);
     border: 1px solid pink;
+    position: fixed;
+    z-index: 1;
 }
 
-.bottom-main{
+.content-main{
     width: 100%;
-    height: 90%;
+    height: 800px;
+    margin-top: 100px;
     background-color: purple;
+    overflow: auto;
 }
 
 .left-foot,
