--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,17 +20,69 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide) */
 
 /* xs first */
 
+/* sidebar */
+
+.corpo{
+    display: flex;
+}
+
 aside{
     background-color: black;
-    width: 5%;
-    height: 900px;
+    width: 50px;
+    /* height: calc(100vh - 100px); */
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.top-side,
+.bottom-side{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+aside .top-side img{
+    width: 50px;
+    padding: 5px 10px 0;
+}
+
+#download{
+    width: 25px;
+    padding-bottom: 10px;
+}
+
+#user{
+    background-color: grey;
+    border-radius: 50%;
+    width: 30px;
+    padding: 5px;
+}
+
+/* fine sidebar */
+
+main{
+    width: calc(100% - 50px);
+    /* height: 900px; */
     float: left;
 }
 
-main{
-    width: 95%;
-    height: 900px;
-    float: left;
+.header-main{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(0,255,0);
+    border: 1px solid pink;
+    position: fixed;
+    z-index: 1;
+}
+
+.content-main{
+    width: 100%;
+    /* height: 800px; */
+    margin-top: 100px;
+    background-color: purple;
+    overflow: auto;
 }
 
 footer{
@@ -41,23 +93,6 @@ footer{
     justify-content: space-between;
     position: fixed;
     bottom: 0;
-}
-
-.header-main{
-    width: 100%;
-    height: 100px;
-    background-color: rgba(0,255,0, 0.4);
-    border: 1px solid pink;
-    position: fixed;
-    z-index: 1;
-}
-
-.content-main{
-    width: 100%;
-    height: 800px;
-    margin-top: 100px;
-    background-color: purple;
-    overflow: auto;
 }
 
 .left-foot,
@@ -71,4 +106,19 @@ footer{
     height: 100%;
     width: 45%;
     background-color: wheat;
+}
+
+
+
+/* responsive */
+
+
+@media screen and (min-width: 768px) {
+    aside{
+        width: 180px;
+    }
+    
+    main{
+        width: calc(100% - 180px);
+    }
 }
