--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+
 .row::after{
     content: '';
     display: table;
@@ -22,22 +27,23 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide) */
 
 /* sidebar */
 
-.corpo{
-    display: flex;
-}
-
 aside{
     background-color: black;
     width: 50px;
-    /* height: calc(100vh - 100px); */
+    height: calc(100vh - 100px);
+    min-height: 350px;
     float: left;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.top-side,
+.top-side{
+    height: calc(100% - 80px);
+}
+
 .bottom-side{
+    height: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,7 +55,7 @@ aside .top-side img{
 }
 
 #download{
-    width: 25px;
+    width: 20px;
     padding-bottom: 10px;
 }
 
@@ -64,25 +70,37 @@ aside .top-side img{
 
 main{
     width: calc(100% - 50px);
-    /* height: 900px; */
+    /* altezza totale viewport - altezza footer */
+    height: calc(100vh - 100px);
     float: left;
 }
 
 .header-main{
-    width: 100%;
-    height: 100px;
-    background-color: rgb(0,255,0);
-    border: 1px solid pink;
+    width: calc(100% - 50px);
+    height: 70px;
+    background-color: rgba(0,0,0, 0.9);
+    line-height: 70px;
     position: fixed;
-    z-index: 1;
+    right: 0;
+    z-index: 2;
+    text-align: right;
+}
+
+.header-main a{
+    padding: 5px 20px;
+    border: 1px solid white;
+    color: white;
+    border-radius: 30px;
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 .content-main{
     width: 100%;
-    /* height: 800px; */
-    margin-top: 100px;
-    background-color: purple;
-    overflow: auto;
+    height: calc(100% - 70px);
+    background-color: rgb(20, 25, 34);
+    margin-top: 70px;
+    /* overflow: auto; da dare al contenuto */
 }
 
 footer{
@@ -121,4 +139,22 @@ footer{
     main{
         width: calc(100% - 180px);
     }
+
+    .header-main{
+        width: calc(100% - 180px);
+    }
 }
+
+/* debug */
+
+/* .debug main{
+    background-color: crimson;
+} */
+
+/* .debug .top-side{
+    background-color: chocolate;
+} */
+
+/* .debug .bottom-side{
+    background-color: cornflowerblue;
+} */
