--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,7 +118,7 @@ main{
     width: calc(100% - 50px);
     height: 70px;
     background-color: rgba(0,0,0, 0.9);
-    line-height: 70px;
+    /* line-height: 70px; */
     position: fixed;
     right: 0;
     z-index: 2;
@@ -132,7 +132,16 @@ main{
     border-radius: 30px;
     text-transform: uppercase;
     text-decoration: none;
-    margin-right: 10px;
+    /* margin-right: 10px; */
+    display: inline-block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    transition: transform .3s;
+}
+
+.header-main a:hover{
+    transform: scale(1.1);
 }
 
 .content-main{
@@ -158,6 +167,10 @@ main{
     font-weight: bold;;
 }
 
+.content-main nav a:hover{
+    color: white;
+}
+
 #bord-btm{
     border-bottom: 2px solid lightgreen;
 }
@@ -174,6 +187,33 @@ main{
 .song-box{
     width: 47%;
     margin-right: 15px;
+    position: relative;
+}
+
+.img-box{
+    position: relative;
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0, 0.6);
+    display: none;
+}
+
+.overlay i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+}
+
+.img-box:hover .overlay{
+    display: block;
 }
 
 .song-box img{
@@ -304,7 +344,7 @@ footer{
     }
 
     aside a{
-        display: inline;
+        display: inline-block;
         text-decoration: none;
         color: white;
     }
