--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,7 @@ aside .bottom-side{
 
 #playlist{
     padding: 10px;
-    overflow-y: scroll;
+    overflow: auto;
     z-index: 0;
 }
 
@@ -222,6 +222,7 @@ main{
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 50px;
+    color: white;
 }
 
 .img-box:hover .overlay{
